--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 			<div class ="circle" id="c2"></div>
 			<div class ="circle" id="c3"></div>
 		</div>
+		<script src=sript.js></script>
 	</body>
 </html> 
